Fix wrapping time in schedule finder table (#209)

--- a/apps/site/assets/css/_schedule-page.scss
+++ b/apps/site/assets/css/_schedule-page.scss
@@ -362,8 +362,6 @@
 }
 
 .schedule-table__headsign {
-  white-space: nowrap;
-
   .c-svg__icon {
     margin-right: $base-spacing / 4;
   }
@@ -419,7 +417,10 @@
   padding: $base-spacing / 4 0;
 
   &--right-adjusted {
+    padding-left: $base-spacing / 2;
     text-align: right;
+    vertical-align: top;
+    white-space: pre;
   }
 }
 
